<resources>
    <string name="app_name">Connect3</string>
    <string name="grid">grid</string>
    <string name="_0_0">0.0</string>
    <string name="_0_1">0.1</string>
    <string name="_2_2">2.2</string>
    <string name="_2_1">2.1</string>
    <string name="_2_0">2.0</string>
    <string name="_1_2">1.2</string>
    <string name="_1_1">1.1</string>
    <string name="_1_0">1.0</string>
    <string name="_0_2">0.2</string>
    <string name="button">Button</string>
    <string name="player_won">Player Won!</string>
    <string name="play_again">Play Again!</string>
</resources>
