<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/playAgainLayout"
        android:layout_width="134dp"
        android:layout_height="90dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/winnerMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_won"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="playAgain"
            android:text="@string/play_again" />
    </LinearLayout>

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="349dp"
        android:layout_height="355dp"
        android:layout_marginBottom="48dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/download"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/playAgainLayout"
        app:rowCount="3"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="102dp"
            android:layout_height="99dp"
            android:layout_marginBottom="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:contentDescription="@string/_0_0"
            android:onClick="dropIn"
            android:tag="0"
            app:layout_column="0"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_marginLeft="10sp"
            android:layout_marginStart="10sp"
            android:contentDescription="@string/_0_1"
            android:onClick="dropIn"
            android:tag="1"
            app:layout_column="1"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_marginLeft="20sp"
            android:layout_marginStart="20sp"
            android:contentDescription="@string/_0_2"
            android:onClick="dropIn"
            android:tag="2"
            app:layout_column="2"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_marginLeft="10sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="22sp"
            android:contentDescription="@string/_1_0"
            android:onClick="dropIn"
            android:tag="3"
            app:layout_column="0"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_marginLeft="10sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="22sp"
            android:contentDescription="@string/_1_1"
            android:onClick="dropIn"
            android:tag="4"
            app:layout_column="1"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_marginLeft="25sp"
            android:layout_marginStart="25sp"
            android:layout_marginTop="22sp"
            android:contentDescription="@string/_1_2"
            android:onClick="dropIn"
            android:tag="5"
            app:layout_column="2"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_marginLeft="10sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="22sp"
            android:contentDescription="@string/_2_0"
            android:onClick="dropIn"
            android:tag="6"
            app:layout_column="0"
            app:layout_row="2" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_marginLeft="10sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="22sp"
            android:contentDescription="@string/_2_1"
            android:onClick="dropIn"
            android:tag="7"
            app:layout_column="1"
            app:layout_row="2" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_marginLeft="25sp"
            android:layout_marginStart="25sp"
            android:layout_marginTop="22sp"
            android:contentDescription="@string/_2_2"
            android:onClick="dropIn"
            android:tag="8"
            app:layout_column="2"
            app:layout_row="2" />

    </android.support.v7.widget.GridLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="0dp" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

</android.support.constraint.ConstraintLayout>